--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="cyberpunk
+">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon"  href="/public/[FREE - HDconvert.com] Untitled design (4).png" />
